[package]
name = "colmet-node-rust"
version = "0.1.0"
authors = ["lambertrocher <lambert.rocher@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "2.33", features = ["yaml"]} # command line arguments parser
zmq = "0.9"
log = "0.4"
simple_logger = "1.3.0"
inotify = "0.7.0"
futures = "0.1.28"
tempdir = "0.3.7"
