[package]
name = "colmet-node-rust"
version = "0.1.0"
authors = ["lambertrocher <lambert.rocher@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "2.33", features = ["yaml"]} # command line arguments parser
zmq = "0.9"
log = "0.4"
simple_logger = "1.3.0"
inotify = "0.7.0"
futures = "0.1.28"
tempdir = "0.3.7"
regex = "1.2.0"
gethostname = "0.2.0"

lazy_static = "1.4.0"
rmp = "^0.8"
rmp-serialize = "0.8.0"
rustc-serialize = "0.3"
bytebuffer = "0.2.0"
rmp-serde = "0.13.7"
serde = "1.0.94"
serde_json = "1.0"
serde_derive = "1.0.98"
libc = "0.2.62"